<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleItm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffbb33"
        android:backgroundTint="#ffffbb33"
        android:paddingTop="15dp"
        android:text="@string/title2"
        android:textAlignment="center"
        android:textColor="#0B0909"
        android:textSize="24sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_marginVertical="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="400dp"
        android:background="@android:color/white">

        <!-- Table Heading -->

        <TableRow
            android:background="@color/orange"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:padding="10sp"
                android:text="@string/col1"
                android:gravity="center"

                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/col2"
                android:gravity="center"

                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="3"
                android:padding="10sp"
                android:text="@string/col3"
                android:gravity="center"

                android:textColor="@color/black"
                android:textSize="14sp" />
        </TableRow>

        <!-- Table Data -->

        <TableRow >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:paddingStart="10dp"
                android:text="@string/raw1Name"
                android:gravity="center"

                android:textColor="@color/black"
                android:textSize="12sp" />


        <TextView
            android:layout_width="0.03dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="4"
            android:padding="10sp"
            android:text="@string/raw1NoOD"
            android:gravity="center"

            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="3"
            android:padding="10sp"
            android:text="@string/raw1dltBtn"
            android:gravity="center"

            android:textColor="@color/black"
            android:textSize="12sp" />
        </TableRow>
        <TableRow >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:padding="10sp"
                android:text="@string/raw2Name"
                android:gravity="center"

                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/raw2NoOD"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="3"
                android:padding="10sp"
                android:text="@string/raw2dltBtn"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </TableRow>
        <TableRow >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:padding="10sp"
                android:text="@string/raw3Name"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/raw3NoOD"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="3"
                android:padding="10sp"
                android:text="@string/raw3dltBtn"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="6dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_shape"
        android:backgroundTint="#ffffbb33"
        android:paddingStart="22dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        android:text="@string/btn2"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="6dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_shape"
        android:backgroundTint="#ffffbb33"
        android:paddingStart="22dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        android:text="@string/btn4"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="6dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_shape"
        android:backgroundTint="#ffffbb33"
        android:paddingStart="22dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        android:text="@string/btn5"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        app:layot_constraintBottom_toBottomOf="parent"
        app:layot_constraintEnd_toEndOf="parent"
        app:layot_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav"
        android:background="#ffffbb33">


    </com.google.android.material.bottomnavigation.BottomNavigationView>

</LinearLayout>