<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleItm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_weight="1"
        android:background="#ffffbb33"
        android:backgroundTint="#ffffbb33"
        android:text="@string/title3"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="#0B0909"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginVertical="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="400dp"
        android:textColor="@color/black"
        android:background="@android:color/white">

        <!-- Table Heading -->

        <TableRow
            android:background="@color/orange"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/col4"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/col5"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </TableRow>

        <!-- Table Data -->

        <TableRow >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:paddingStart="10dp"
                android:gravity="center"
                android:text="@string/raw1Category"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:layout_width="0.03dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/raw1Count"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </TableRow>
        <TableRow >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:paddingStart="10dp"
                android:gravity="center"
                android:text="@string/raw2Category"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:layout_width="0.03dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/raw2Count"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </TableRow>
        <TableRow >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:paddingStart="10dp"
                android:gravity="center"
                android:text="@string/raw3Category"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:layout_width="0.03dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/raw3Count"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </TableRow>
        <TableRow >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:paddingStart="10dp"
                android:gravity="center"
                android:text="@string/raw4Category"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:layout_width="0.03dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/raw4Count"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="6dp"
        android:layout_weight="1"
        android:background="@drawable/button_shape"
        android:backgroundTint="#ffffbb33"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        android:text="@string/btn3"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        app:layot_constraintBottom_toBottomOf="parent"
        app:layot_constraintEnd_toEndOf="parent"
        app:layot_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav"
        android:background="#ffffbb33">


    </com.google.android.material.bottomnavigation.BottomNavigationView>

</LinearLayout>