<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleItm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_weight="1"
        android:background="#ffffbb33"
        android:backgroundTint="#ffffbb33"
        android:text="@string/title1"
        android:textAlignment="center"
        android:textColor="#0B0909"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_weight="1"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:srcCompat="@drawable/certificate_icon_10" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/noOfDonation" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="6dp"
        android:layout_weight="1"
        android:background="@drawable/button_shape"
        android:backgroundTint="#ffffbb33"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        android:text="@string/btn1"
        android:textSize="16sp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layot_constraintBottom_toBottomOf="parent"
        app:layot_constraintTop_toTopOf="parent"
        app:layot_constraintEnd_toEndOf="parent"
        app:layot_constraintStart_toStartOf="parent">
    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        app:layot_constraintBottom_toBottomOf="parent"
        app:layot_constraintEnd_toEndOf="parent"
        app:layot_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav"
        android:background="#ffffbb33">


    </com.google.android.material.bottomnavigation.BottomNavigationView>


</LinearLayout>